# game_of_life

./: CMakeLists.txt  README.md  build-linux-debug.sh  build-linux-release.sh  build-macos-debug.sh  build-macos-release.sh  build-mingw-debug.ps1  build-mingw-release.ps1  build-msvc-debug.ps1  build-msvc-release.ps1  clean.ps1  git-keep.ps1  git-push.ps1
include/: console_mode.h  grid.h  main.hpp  sdl_mode.h
license/: Zlib License
src/: console_mode.cpp  grid.cpp  main.cpp  sdl_mode.cpp
tests/: console_mode.cpp  console_mode.h
