cmake_minimum_required(VERSION 3.5)
get_filename_component(PROJECT_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
project(${PROJECT_NAME} LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
include_directories(include tests)
aux_source_directory(src SRC_DIR)
aux_source_directory(tests TESTS_DIR)
add_executable(${PROJECT_NAME} ${SRC_DIR} ${TESTS_DIR})
# SDL2
set(SDL2_DIR ${CMAKE_CURRENT_SOURCE_DIR}/vendor/SDL2/cmake)
find_package(SDL2 REQUIRED CONFIG REQUIRED COMPONENTS SDL2)
find_package(SDL2 REQUIRED CONFIG COMPONENTS SDL2main)
if(TARGET SDL2::SDL2main)
    target_link_libraries(${PROJECT_NAME} PRIVATE SDL2::SDL2main)
endif()
target_link_libraries(${PROJECT_NAME} PRIVATE SDL2::SDL2)
